Article tag updates

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -3,14 +3,14 @@ id: docs-and-snippets
 title: Docs & Snippets
 displayed_sidebar: docs
 slug: /
-description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud.
+description: SSJS + JS + AMPScript + SQL + Marketing Cloud Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud.
 image: img/og/og-image-docs-and-snippets.png
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
 import { Button } from '/src/components/Buttons.js';
 
-<LeadText content="SSJS + JS + AMPScript + SQL + SFMC & MCP Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
+<LeadText content="SSJS + JS + AMPScript + SQL + Marketing Cloud Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
 ## Marketing Cloud Engagement
 
