--- a/docs/js/snippets/tailor-with-data.mdx
+++ b/docs/js/snippets/tailor-with-data.mdx
@@ -4,7 +4,7 @@ title: Tailor the experience with data logic
 sidebar_label: Tailor with Data
 description: Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows.
 image: img/og/og-image-tailor-with-data.png
-tags: [Marketing Cloud, Eloqua, JavaScript, Personalisation, Cloud Page]
+tags: [Marketing Cloud Engagement, Eloqua, JavaScript, Personalisation, Cloud Page]
 ---
 
 import Tabs from '@theme/Tabs';
