--- a/docs/salesforce/agentforce/sf-agentforce-basics.mdx
+++ b/docs/salesforce/agentforce/sf-agentforce-basics.mdx
@@ -4,7 +4,7 @@ title: Agentforce Basics
 sidebar_label: Agentforce Basics
 description: WIP.
 image: img/og/og-image-sf-agentforce-basics.png
-tags: [Agentforce, Einstein, AI, CRM, Data Cloud]
+tags: [Salesforce, Agentforce, Einstein, AI, CRM, Data Cloud]
 unlisted: true
 ---
 
