--- a/docs/salesforce/agentforce/sf-agentforce-best-practices.mdx
+++ b/docs/salesforce/agentforce/sf-agentforce-best-practices.mdx
@@ -4,7 +4,7 @@ title: Agentforce Best Practices
 sidebar_label: Agentforce Best Practices
 description: WIP.
 image: img/og/og-image-sf-agentforce-best-practices.png
-tags: [Agentforce, Einstein, AI, CRM, Best Practice]
+tags: [Salesforce, Agentforce, Einstein, AI, CRM, Best Practice]
 unlisted: true
 ---
 
