--- a/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
@@ -4,7 +4,7 @@ title: MCE AppExchange Solutions
 sidebar_label: AppExchange Solutions
 description: Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
 image: img/og/og-image-sfmc-appexchange.png
-tags: [Marketing Cloud, App, AppExchange]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, App, AppExchange]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
