--- a/docs/salesforce/marketing-cloud-engagement/config/behavioral-triggers.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/behavioral-triggers.mdx
@@ -4,7 +4,7 @@ title: MCE Behavioral Triggers
 sidebar_label: Behavioral Triggers
 description: Win-back your e-commerce customers with SFMC Behavioral Triggers.
 image: img/og/og-image-sfmc-behavioral-triggers.png
-tags: [Marketing Cloud, Configuration, Email, Journey, Personalisation, Behavioral Triggers, Einstein]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, Email, Journey, Personalisation, Behavioral Triggers, Einstein]
 ---
 
 import Tabs from '@theme/Tabs';
