--- a/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
@@ -4,7 +4,7 @@ title: MCE Code Resource
 sidebar_label: Power of Code Resources
 description: Learn how to use and abuse SFMC Code Resources, the free-of-charge programmatic powerhouse.
 image: img/og/og-image-sfmc-code-resources.png
-tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, App]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SSJS, AMPScript, Snippet, Cloud Page, App, API]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
