--- a/docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx
@@ -4,7 +4,7 @@ title: MCE Contact Deletion
 sidebar_label: Contact Deletion Process
 description: Marketing Automation is as powerful as the database quality behind it. To make it good you must first remove the bad. Let's do it.
 image: img/og/og-image-sfmc-contact-deletion.png
-tags: [Marketing Cloud, Snippet, SSJS, SQL, Data Extensions, Data Management]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Snippet, SSJS, SQL, Data Extensions, Data Management]
 toc_max_heading_level: 4
 ---
 
