--- a/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
@@ -4,7 +4,7 @@ title: Export, Import & Document SFMC Roles
 sidebar_label: Export, Import & Document SFMC Roles
 description: Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds.
 image: img/og/og-image-js-export-import-document-sfmc-roles.png
-tags: [JavaScript, Marketing Cloud, Configuration, Users, Setup]
+tags: [JavaScript, Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, Users, Setup]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
