--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -4,7 +4,7 @@ title: MCE Licence Limits
 sidebar_label: Licence Limits
 description: With great flexibility come great limitations. Learn how MCE limits can make or break your marketing operations.
 image: img/og/og-image-sfmc-licence-limits.png
-tags: [Marketing Cloud, Best Practice, Automation, API, Data Extensions, Setup]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Best Practice, API, Performance, Data Extensions, Setup]
 toc_max_heading_level: 4
 unlisted: true
 ---
