--- a/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx
@@ -4,7 +4,7 @@ title: MCC Integration Patterns
 sidebar_label: MCC Integration Patterns
 description: "Marketing Cloud Connect Architecture: Single-Org, Multi-Org and everything in between. Integrate Salesforce CRM and Marketing Cloud the right way."
 image: img/og/og-image-sfmc-mcc-integration-patterns.png
-tags: [Marketing Cloud, CRM, Configuration, Setup, Integration, Automation]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, CRM, Configuration, Setup, Integration]
 toc_max_heading_level: 4
 ---
 
