--- a/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
@@ -4,7 +4,7 @@ title: MCE Mobile Connect Data Views
 sidebar_label: Mobile Connect Data Views
 description: Dive deep into SMS System Data Views - the backend Marketing Cloud data. Actionable pearls await.
 image: img/og/og-image-sfmc-mobile-connect-data-views.png
-tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, SMS]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, SQL, Analytics, Data Extensions, SMS]
 ---
 
 import Tabs from '@theme/Tabs';
