--- a/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
@@ -4,7 +4,7 @@ title: MCE System Data Views
 sidebar_label: System Data Views
 description: Dive deep into System Data Views - the backend Marketing Cloud data. Actionable pearls await.
 image: img/og/og-image-sfmc-system-data-views.png
-tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, Email, Automation, Journey]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, SQL, Analytics, Data Extensions, Email, Journey]
 ---
 
 import Tabs from '@theme/Tabs';
