--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
@@ -4,7 +4,7 @@ title: SFMC Account Architecture
 sidebar_label: Account Architecture
 description: Learn how to structure your Marketing Cloud Account to make the most of the Business Units, Marketing Cloud Connect and deliverability features.
 image: img/og/og-image-webinar-sfmc-account-architecture.png
-tags: [Webinar, Marketing Cloud, Setup, Configuration, Deliverability]
+tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, Setup, Configuration, Deliverability]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
