--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
@@ -4,7 +4,7 @@ title: Salesforce Data in SFMC Journey Builder
 sidebar_label: SF Data in Journey Builder
 description: Learn how to integrate and use Salesforce CRM data with SFMC Journey Builder. In both ways. The right way.
 image: img/og/og-image-webinar-salesforce-data-in-journey-builder.png
-tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, CRM, Configuration, Data Management, Integration, Journey]
+tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, Best Practice, AMPScript, CRM, Configuration, Data Management, Integration, Journey]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
