--- a/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Debugging Email Sends
 sidebar_label: Debugging Email Sends
 description: Make finding problems with email delivery in Salesforce Marketing Cloud great again. SQL with Query Studio to the rescue.
 image: img/og/og-image-/sql-debugging-email-sends.png
-tags: [Marketing Cloud, SQL, Snippet, Email, Debugging, Analytics]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL, Snippet, Email, Debugging, Analytics]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
