--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Case
 sidebar_label: Case
 description: Empower your Marketing Cloud queries with conditional SQL CASE logic.
 image: img/og/og-image-sql-case.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
