--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Date Functions
 sidebar_label: Date Functions
 description: Take control over dates with built-in SQL functions. Let the query do the job.
 image: img/og/og-image-sql-date-functions.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
