--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL NULL Functions
 sidebar_label: Null Functions
 description: IS NULL, or IS NOT NULL, that is the question. Ways of working with NULL values in SFMC SQL.
 image: img/og/og-image-sql-null-functions.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
