--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Numeric Functions
 sidebar_label: Numeric Functions
 description: Take control over numbers with built-in SQL functions. Let the query do the job.
 image: img/og/og-image-sql-numeric-functions.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
