--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Select
 sidebar_label: Select
 description: Selected information on the SELECT statement in SFMC SQL.
 image: img/og/og-image-sql-select.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
