--- a/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
@@ -4,7 +4,7 @@ title: SSJS Debugging & Error Handling
 sidebar_label: Debugging & Error Handling
 description: To catch, or not to catch, that is debugging.
 image: img/og/og-image-ssjs-debugging-and-error-handling.png
-tags: [Marketing Cloud, SSJS, Debugging, Cloud Page, Email, Automation]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SSJS, Debugging, Cloud Page, Email]
 ---
 
 import Tabs from '@theme/Tabs';
