--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
@@ -4,7 +4,7 @@ title: MobileConnect Phone Change
 sidebar_label: MobileConnect Phone Change
 description: Control your MobileConnect data with hidden _MobileAddress features.
 image: img/og/og-image-ssjs-mobileconnect-phone-change.png
-tags: [Marketing Cloud, SSJS, SMS]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SSJS, SMS]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
