--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
@@ -4,7 +4,7 @@ title: SSJS Style Guide
 sidebar_label: Style Guide
 description: Script with style. Readable code is a few rules & best practices away.
 image: img/og/og-image-ssjs-style-guide.png
-tags: [Marketing Cloud, SSJS, Style Guide, Best Practice]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SSJS, Style Guide, Best Practice]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
