--- a/docs/salesforce/marketing-cloud-engagement/zen-of-sfmc.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/zen-of-sfmc.mdx
@@ -3,7 +3,7 @@ id: zen-of-sfmc
 title: Zen of SFMC
 description: Salesforce Marketing Cloud implementation, development and operations Best Practices. In brief and detail.
 image: img/og/og-image-zen-of-sfmc.png
-tags: [Marketing Cloud, Best Practice]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Best Practice]
 toc_max_heading_level: 4
 ---
 
