--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
@@ -4,7 +4,7 @@ title: MCP Serverside Code Context
 sidebar_label: Serverside Code Context
 description: "Context is king. Also when writing MCP Template Serverside Code."
 image: img/og/og-image-mcp-serverside-code-context.png
-tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
+tags: [Salesforce, Marketing Cloud Personalization, Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
