--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
@@ -4,7 +4,7 @@ title: MCP Serverside Code Properties
 sidebar_label: Serverside Code Properties
 description: "Build your marketers' dream campaign configuration UI in Marketing Cloud Personalization (Interaction Studio). All the input magic in one place."
 image: img/og/og-image-mcp-serverside-code-properties.png
-tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
+tags: [Salesforce, Marketing Cloud Personalization, Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
