--- a/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
@@ -4,7 +4,7 @@ title: How to get SF Certification vouchers?
 sidebar_label: SF Certification Vouchers
 description: Salesforce Certifications. What, why and how (you can pay less).
 image: img/og/og-image-faq-sf-certification-vouchers.png
-tags: [Marketing Cloud, FAQ]
+tags: [Salesforce, FAQ]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
