--- a/sites/faq/salesforce/how-to-get-sfmc-hands-on-experience.mdx
+++ b/sites/faq/salesforce/how-to-get-sfmc-hands-on-experience.mdx
@@ -4,7 +4,7 @@ title: How to get hands-on experience with SFMC
 sidebar_label: SFMC Hands-on Experience
 description: "You want to learn Salesforce Marketing Cloud. And the best way to learn is to get your hands dirty. So, how can you get access to the SFMC playground?"
 image: img/og/og-image-faq-sfmc-hands-on-experience.png
-tags: [Marketing Cloud, FAQ]
+tags: [Salesforce, Marketing Cloud, Marketing Cloud Engagement, FAQ]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
