--- a/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
+++ b/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
@@ -4,7 +4,7 @@ title: Marketing Cloud Engagement Ideas
 sidebar_label: Marketing Cloud Engagement
 description: Here you can find all my Salesforce Marketing Cloud Engagement IdeaExchange contributions. Let's make the change!
 image: img/og/og-image-marketing-cloud-ideas.png
-tags: [Marketing Cloud Engagement]
+tags: [Salesforce, Marketing Cloud Engagement]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
