--- a/sites/ideas/salesforce/marketing-cloud-personalization-ideas.mdx
+++ b/sites/ideas/salesforce/marketing-cloud-personalization-ideas.mdx
@@ -4,7 +4,7 @@ title: Marketing Cloud Personalization Ideas
 sidebar_label: Marketing Cloud Personalization
 description: Here you can find all my Marketing Cloud Personalization (Interaction Studio) IdeaExchange contributions. Let's make the change!
 image: img/og/og-image-mcp-ideas.png
-tags: [Marketing Cloud Personalization, Interaction Studio]
+tags: [Salesforce, Marketing Cloud Personalization, Interaction Studio]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
