--- a/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
@@ -4,7 +4,7 @@ title: AMPScript Style Guide
 sidebar_label: Style Guide
 description: Script with style. Readable code is a few rules & best practices away.
 image: img/og/og-image-ampscript-style-guide.png
-tags: [Marketing Cloud Engagement, AMPScript, Style Guide, Best Practice]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, AMPScript, Style Guide, Best Practice]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
