--- a/docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx
@@ -4,7 +4,7 @@ title: MCE Enhanced Send Log
 sidebar_label: Enhanced Send Log
 description: Create, customise and enhance SFMC Send Log for debugging and reporting.
 image: img/og/og-image-sql-enhanced-send-log.png
-tags: [Marketing Cloud, SQL, Snippet, Email, Debugging, Analytics]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL, Snippet, Email, Debugging, Analytics]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
