--- a/docs/salesforce/marketing-cloud-engagement/config/features-on-demand.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/features-on-demand.mdx
@@ -4,7 +4,7 @@ title: MCE Features On Demand
 sidebar_label: Features On Demand
 description: Discover the Salesforce Marketing Cloud Features On Demand and unlock platform potential.
 image: img/og/og-image-sfmc-features-on-demand.png
-tags: [Marketing Cloud, Configuration, Deliverability, Email, SMS, Analytics, Journey, Automation, Data Extensions, Setup]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, Deliverability, Email, SMS, Analytics, Journey, Data Extensions, Setup]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
