--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Aggregate Functions
 sidebar_label: Aggregate Functions
 description: Group rows and apply aggregate functions to see the big picture in your data extensions.
 image: img/og/og-image-sql-aggregate-functions.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import Tabs from '@theme/Tabs';
