--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Basics
 sidebar_label: SQL Basics
 description: SELECT your data FROM Salesforce Marketing Cloud WHERE drag-and-drop Filters are not enough.
 image: img/og/og-image-sql-basics.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
