--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL From
 sidebar_label: From
 description: Tell the SQL query FROM where you need the data.
 image: img/og/og-image-sql-from.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
