--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Like
 sidebar_label: Like
 description: Get a LIKE and build more flexible SQL queries.
 image: img/og/og-image-sql-like.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import Tabs from '@theme/Tabs';
