--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Where
 sidebar_label: Where
 description: Use WHERE to make your query lean and to the point. Less is more.
 image: img/og/og-image-sql-where.png
-tags: [Marketing Cloud, SQL]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
