--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-script-template.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-script-template.mdx
@@ -4,7 +4,7 @@ title: SSJS Script Template
 sidebar_label: SSJS Script Template
 description: Jumpstart your coding with best practice fueled SSJS Template.
 image: img/og/og-image-ssjs-script-template.png
-tags: [Marketing Cloud, SSJS, Snippet]
+tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SSJS, Snippet]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
