--- a/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
@@ -4,7 +4,7 @@ title: MCP Open Time Email
 sidebar_label: Open Time Email
 description: Personalise your SFMC emails with the next best action recommendations. In real-time. Even after delivery. Magic.
 image: img/og/og-image-mcp-open-time-email.png
-tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, Email]
+tags: [Salesforce, Marketing Cloud Personalization, Personalization, Interaction Studio, Personalisation, Email]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
