--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
@@ -4,7 +4,7 @@ title: MCP Serverside Code Basics
 sidebar_label: Serverside Code Basics
 description: "Wrap your head around the core feature of Marketing Cloud Personalization (Interaction Studio) and build the bridge between marketer and customer."
 image: img/og/og-image-mcp-serverside-code-basics.png
-tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
+tags: [Salesforce, Marketing Cloud Personalization, Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
 import { LeadText } from '/src/components/LeadText.js';
