sidebar label unification

--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
@@ -1,7 +1,7 @@
 ---
 id: sql-basics
 title: SFMC SQL Basics
-sidebar_label: SQL Basics
+sidebar_label: Basics
 description: SELECT your data FROM Salesforce Marketing Cloud WHERE drag-and-drop Filters are not enough.
 image: img/og/og-image-sf-mce-sql-basics.png
 tags: [Salesforce, Marketing Cloud Engagement, Marketing Automation, SQL]
